test_yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-octarine
  namespace: hello-octarine
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-octarine
  template:
    metadata:
      labels:
        app: hello-octarine
    spec:
      serviceAccountName: octarine
      hostNetwork: true
      containers:
        - name: hello-octarine
          image: octarinesec/hello-octarine:1.31
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            privileged: true
