test_yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-octarine
  namespace: hello-octarine
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello-octarine
